Changes made to the file path.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div>
     <header>
       <div class="icon">
-        <img class="logo" alt="logo" src="img/logoWhiteTransparent.png">
+        <img class="logo" alt="logo" src="/logoWhiteTransparent.png">
       </div>
 
       <nav class="bodyNav">
@@ -31,7 +31,7 @@
 
         <div>
           <div class="contentpicture">
-            <img class="slide" src="/img/pic2.jpg">
+            <img class="slide" src="pic2.jpg">
           </div>
           <div class="content">
             <section class="section">
@@ -39,10 +39,12 @@
                 <h2>Our mission</h2>
               </div>
               <div class="sectionparagraphs">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Natoque penatibus et magnis dis
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Natoque penatibus et magnis
+                  dis
                   parturient.</p>
-                   <p> A diam maecenas sed enim ut sem. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Amet mauris commodo quis imperdiet massa tincidunt. Id neque aliquam vestibulum morbi blandit cursus risus.</p>
-                   <p> Odio  eu  feugiat pretium nibh ipsum consequat nisl vel pretium. Ullamcorper sit amet risus nullam eget felis eget. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Sed faucibus turpis in eu mi bibendum neque. Tellus in hac habitasse plate dictumst vestibulum.</p>
+                <p> A diam maecenas sed enim ut sem. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Amet mauris commodo quis imperdiet massa tincidunt. Id neque aliquam vestibulum morbi blandit cursus risus.</p>
+                <p> Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Ullamcorper sit amet risus nullam eget felis eget. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Sed faucibus turpis in eu mi bibendum neque. Tellus in
+                  hac habitasse plate dictumst vestibulum.</p>
               </div>
             </section>
           </div>
@@ -50,19 +52,20 @@
             <p>We love the nature, it refrects from our work <br>and how we get our raw materials.</p>
           </div>
 
-          <div >
+          <div>
             <section class="section">
               <div class="sectioncontent">
                 <h2>Our Story</h2>
               </div>
               <div class="sectionparagraphs">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Natoque penatibus et magnis dis
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Natoque penatibus et magnis
+                  dis
                   parturient.</p>
-                  <p> A diam maecenas sed enim ut sem. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Amet mauris commodo quis imperdiet massa tincidunt. Id neque aliquam vestibulum morbi blandit cursus risus. Odio
+                <p> A diam maecenas sed enim ut sem. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Amet mauris commodo quis imperdiet massa tincidunt. Id neque aliquam vestibulum morbi blandit cursus risus. Odio
                   eu
                   feugiat
                   pretium nibh ipsum consequat nisl vel pretium.</p>
-                  <p> Ullamcorper sit amet risus nullam eget felis eget. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Sed faucibus turpis in eu mi bibendum neque. Tellus in hac habitasse platea
+                <p> Ullamcorper sit amet risus nullam eget felis eget. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Sed faucibus turpis in eu mi bibendum neque. Tellus in hac habitasse platea
                   dictumst
                   vestibulum.</p>
               </div>
@@ -85,7 +88,7 @@
           </section>
         </div>
 
-        <div >
+        <div>
           <section class="section">
             <div class="sectioncontent">
               <h2>Our Team</h2>
@@ -93,13 +96,13 @@
             <div class="sectionparagraphs team">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Natoque penatibus et magnis dis
                 parturient.</p>
-                  <p>A diam maecenas sed enim ut sem. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Amet mauris commodo quis imperdiet massa tincidunt. Id neque aliquam vestibulum morbi blandit cursus risus. Odio eu
+              <p>A diam maecenas sed enim ut sem. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Amet mauris commodo quis imperdiet massa tincidunt. Id neque aliquam vestibulum morbi blandit cursus risus. Odio eu
                 feugiat
                 pretium nibh ipsum consequat nisl vel pretium.</p>
-                <p> Ullamcorper sit amet risus nullam eget felis eget. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Sed faucibus turpis in eu mi bibendum neque. Tellus in hac habitasse platea
+              <p> Ullamcorper sit amet risus nullam eget felis eget. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Sed faucibus turpis in eu mi bibendum neque. Tellus in hac habitasse platea
                 dictumst
                 vestibulum.</p>
-                <a href="#meet">Meet the team<i class="fas fa-chevron-right"></i></a>
+              <a href="#meet">Meet the team<i class="fas fa-chevron-right"></i></a>
             </div>
           </section>
         </div>
@@ -122,10 +125,12 @@
         </div>
         <p>Join our mailing list</p>
         <form>
-        <input name="EMAIL" value="" placeholder="Enter Email Address" class="email">
-        <input type="submit" value="Join" name="subscribe" class="submit">
-      </form>
-      <div><p class="copyright">Copyright © 2019 Awakan Victor</p></div>
+          <input name="EMAIL" value="" placeholder="Enter Email Address" class="email">
+          <input type="submit" value="Join" name="subscribe" class="submit">
+        </form>
+        <div>
+          <p class="copyright">Copyright © 2019 Awakan Victor</p>
+        </div>
       </div>
 
       <div class="footericondiv">
